add item count to inventory service
